Fix smartspace issues
Signed-off-by: Saul Henriquez <saul_henriquez@hotmail.com>